// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/UploadsManagerAction should render correctly with hasMultipleFailedUploads as false 1`] = `
<div
  className="bcu-uploads-manager-action"
>
  <PrimaryButton
    data-resin-target="uploadresumeheader"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      defaultMessage="Resume"
      id="be.resume"
    />
  </PrimaryButton>
</div>
`;

exports[`elements/content-uploader/UploadsManagerAction should render correctly with hasMultipleFailedUploads as true 1`] = `
<div
  className="bcu-uploads-manager-action"
>
  <PrimaryButton
    data-resin-target="uploadresumeheader"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      defaultMessage="Resume All"
      id="be.resumeAll"
    />
  </PrimaryButton>
</div>
`;
